--- a/27.04.2019/27.04.2019.csproj
+++ b/27.04.2019/27.04.2019.csproj
@@ -55,6 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Command\Excell.cs" />
+    <Compile Include="Command\PDF.cs" />
+    <Compile Include="Command\Search.cs" />
     <Compile Include="ViewModel\BaseView.cs" />
     <Compile Include="ViewModel\QruplarView.cs" />
     <Page Include="MainWindow.xaml">
